--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "scripts": {
     "clean": "rimraf bin",
     "compile": "tsc -p .",
-    "copyfiles": "copyfiles ./package*.json ./*.d.ts ./*.md ./.npmignore \"**/*.air\" bin",
+    "copyfiles": "copyfiles ./package*.json ./*.d.ts ./*.md ./.npmignore \"**/*.aa\" bin",
     "build": "npm run clean && npm run copyfiles && npm run compile",
     "publish": "npm publish bin --access=public"
   },
